--- a/.github/workflows/linkcheck.yml
+++ b/.github/workflows/linkcheck.yml
@@ -11,3 +11,6 @@ jobs:
       uses: actions/checkout@v3
     - name: Scan for broken links
       uses: enkeyz/linkcheck-action@main
+      with:
+        concurrentRequests: 100
+        timeout: 10s
